AC_INIT(codoc.c)
CODOC_VERSION=0.3
AC_CANONICAL_HOST

case "$host_cpu" in
  i486 | i586 | i686)
    ARCH=i386
    ;;
  *)
    ARCH="$host_cpu"
    ;;
esac
AC_SUBST(ARCH)
 
AM_INIT_AUTOMAKE(codoc, ${CODOC_VERSION})
PKG_CHECK_MODULES(GLIB, glib-2.0)
PKG_CHECK_MODULES(XML, libxml-2.0)
AC_PROG_CC

dnl BEGIN: Check for stuff required to do XML processing.
AC_PATH_PROG(XSLTPROC, xsltproc, no)
docbook_xml_prefix=no
for test_prefix in $DOCBOOK_XML_PREFIX /usr/local /usr / ; do
  got=0
  for t in "$test_prefix/etc/xml/catalog" "$test_prefix/share/xml/catalog" \
           "$test_prefix/share/xml/docbook/stylesheet/docbook-xsl/catalog.xml"
  do
    if test -r "$t" ; then
      XML_CATALOG_FILES="$t"
      got=1
    fi
  done

  if test $got = 1 ; then
    got=0
    for t in "$test_prefix/share/xml/docbook/xsl/html/docbook.xsl" \
             "$test_prefix/share/xml/docbook/xsl/modular/html/docbook.xsl" ; do
      if test -r "$t" ; then
	XSL_HTML_DOCBOOK_XSL="$t"
	got=1
      fi
    done
  fi
  if test $got = 1 ; then
    docbook_xml_prefix=$test_prefix
    break
  fi
done

if test "x$docbook_xml_prefix" = xno ; then
  XSLTPROC=no
fi
XSLTPROC_ARGS=""
AC_SUBST(XSLTPROC_ARGS)
AC_SUBST(XML_CATALOG_FILES)
AC_SUBST(XSL_HTML_DOCBOOK_XSL)
dnl END: Check for stuff required to do XML processing.

AC_HEADER_STDC
AC_C_CONST
AC_TYPE_SIZE_T

AC_OUTPUT([Makefile doc/Makefile pkgwriteinfo])
